Fixes spacing

--- a/src/components/FacetCuisine/FacetCuisine.css
+++ b/src/components/FacetCuisine/FacetCuisine.css
@@ -6,6 +6,7 @@
   font-size: 16px;
   line-height: 20px;
   margin-bottom: 4px;
+  padding: 0 2px;
 }
 
 .facet ul {
@@ -25,10 +26,12 @@
 
 .facet li[data-name] {
   cursor: pointer;
+  padding: 0 2px;
 }
 
 .facet li[data-name]:hover {
   background: white;
+  border-radius: 2px;
 }
 
 .facet__name {
@@ -49,7 +52,7 @@
   background: transparent;
   border: 0;
   margin: 0;
-  padding: 0;
+  padding: 0 2px;
   font-size: 14px;
   font-family: 'Work Sans', sans-serif;
   text-decoration: underline;
